<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ejemplo5Clase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="numero_intentos">Número de Intentos</string>
    <string name="repetir_colores">Repetir Colores</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_recuperar">Recuperar</string>
    <string name="boton_guardar_memoria">G Mem</string>
    <string name="boton_recuperar_memoria">R Mem</string>
    <string name="nombre_configuracion">configurajuego</string>
    <string name="prueba">prueba</string>
    <string name="title_activity_externa">ExternaActivity</string>

</resources>
